docs/sf-export/sfdx-raw/objects/SAS_Mapping__mdt/SAS_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to store the field mapping between SAS and Salesforce</description>
    <label>SAS Mapping</label>
    <pluralLabel>SAS Mappings</pluralLabel>
</CustomObject>