docs/sf-export/sfdx-raw/objects/SAS_Mapping__mdt/fields/CDI_Field__c.field-meta.xml
<CustomField>
    <fullName>CDI_Field__c</fullName>
    <description>To store the callout data item field which needs to map with the SAS field</description>
    <label>CDI Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>