docs/sf-export/sfdx-raw/objects/SAS_Mapping__mdt/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>To store the external SAS callout method name</description>
    <label>Method Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>