docs/sf-export/sfdx-raw/objects/SAS_Mapping__mdt/fields/SAS_Field__c.field-meta.xml
<CustomField>
    <fullName>SAS_Field__c</fullName>
    <description>To store the SAS field name created in the callout data item object</description>
    <label>SAS Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>