docs/sf-export/sfdx-raw/objects/SAS_Mapping__mdt/listViews/SAS.listView-meta.xml
<ListView>
    <fullName>SAS</fullName>
    <columns>MasterLabel</columns>
    <columns>SAS_Field__c</columns>
    <columns>CDI_Field__c</columns>
    <columns>Method_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>SAS</label>
</ListView>